5 Jul 2018
fix: typo in bittorrent.php
fit: incorrect method name

1 Jul 2018
fix: check if folder exists before setting perms set_perms.php
update: set new/updated files owner:group according to current owner:group set_perms.php
fix: check for empty vars before using them signup.php
fix: install folder check
fix: incorrect file permissions in 775 folders
fix: bit bucket link not showing
update: max image size in AJAX Chat
fix: images in AJAX Chat
remove: unused gzip directory
add: logs folder
fix: permissions
update: README to correct install directions
remove: redundant fetch() functions
replace: remote image proxy with local image proxy, enable only if you have the space for it
purged: database_updates, rethinking the process
updated: README to include required apps and php extensions
add: option to show random background on every page
add: lazy load most images

27 Jun 2018
update: adjust avatar display size for consistency
update: use real ip when logging failed logins
add: TVMaze TV Schedule
add: php-bz2 requirement for TVMaze TV Schedule

26 Jun 2018
update: hide video butto in AJAX Chat on small screen
add: notice to run uglify.php when changing classes info

25 Jun 2018
update: limit video size in AJAX Chat
add: video player to AJAX Chat
fix: banner width
add: static and video banners to top of template
update: enable background image on details.php
add: gm.gif and hiya.gif
remove: bans and bannedemail foreign keys
fix: missing initial site statitics data
fix: allowed staff and missing lang reference in backup.php

24 Jun 2018
fix: check for empty pm ids before attempting to delete them
change: anchor tags to id from name for uniformity
fix: incorrect url for announce
update: resetpw.php when importing from U-232 allow compare hintanswer with md5
add: forum_id column to over_forums
remove: unused css links in forums.php
remove: direct link to Pu-239.pw/forums.php
fix: staff forums id
fix: over_forums.php edit forum with same sort number